Moderniser behandligskontroll a la fpsak (#1665)