@@ -4,17 +4,14 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.TreeSet;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import javax.enterprise.inject.Instance;
 import javax.enterprise.inject.spi.CDI;
 
 import org.slf4j.Logger;
@@ -24,55 +21,45 @@ import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingModell
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingModellVisitor;
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingSteg;
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegModell;
-import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegOvergangEvent;
-import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegProsesseringResultat;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegRef;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegTilstandSnapshot;
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegUtfall;
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingskontrollKontekst;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.StegProsesseringResultat;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.events.BehandlingStegOvergangEvent;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.events.BehandlingStegTilstandEndringEvent;
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.impl.transisjoner.Transisjoner;
+import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.transisjoner.FellesTransisjoner;
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.transisjoner.StegTransisjon;
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.transisjoner.TransisjonIdentifikator;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingStegStatus;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingStegTilstand;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingStegType;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingType;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingTypeStegSekvens;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.aksjonspunkt.AksjonspunktDefinisjon;
-import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.aksjonspunkt.VurderingspunktDefinisjon;
+import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.aksjonspunkt.VurderingspunktType;
 
 /**
  * Modell av behandlingssteg, vurderingspunkter og aksjonspunkter som brukes i evaluering av en prosess for behandling.
  */
 public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
 
-    private static final Logger logger = LoggerFactory.getLogger(BehandlingModellImpl.class);
+    private static final Logger LOG = LoggerFactory.getLogger(BehandlingModellImpl.class);
     private static final String ER_IKKE_DEFINERT_BLANT = " er ikke definert blant: ";
-
+    private final BehandlingType behandlingType;
     /**
      * Enkel sekvens av behandlingsteg. Støtter ikke branching p.t.
      */
     private List<BehandlingStegModellImpl> steg = new ArrayList<>();
-
-    private TriFunction<BehandlingStegType, BehandlingType, BehandlingStegModellImpl> lookup;
-
-    private final BehandlingType behandlingType;
-
+    private BiFunction<BehandlingStegType, BehandlingType, BehandlingStegModellImpl> lookup;
     private boolean destroyOnClose;
 
-
     /**
      * Default modell bruker steg implementert vha. CDI.
      *
+     * @param destroyOnClose - hvorvidt #close skal gjøre noe.
      */
-    public BehandlingModellImpl(BehandlingType behandlingType) {
-        this(behandlingType, true);
-    }
-
-    /**
-     * Default modell bruker steg implementert vha. CDI.
-     *
-     * @param destroyOnClose   - hvorvidt #close skal gjøre noe.
-     */
-    public BehandlingModellImpl(BehandlingType behandlingType, boolean destroyOnClose) {
+    protected BehandlingModellImpl(BehandlingType behandlingType, boolean destroyOnClose) {
         Objects.requireNonNull(behandlingType, "behandlingType"); //$NON-NLS-1$ // NOSONAR
         this.destroyOnClose = destroyOnClose;
         this.behandlingType = behandlingType;
@@ -80,11 +67,45 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
     }
 
     /* for testing først og fremst. */
-    public BehandlingModellImpl(BehandlingType behandlingType,
-                                TriFunction<BehandlingStegType, BehandlingType, BehandlingSteg> lookup) {
+    protected BehandlingModellImpl(BehandlingType behandlingType,
+                                   BiFunction<BehandlingStegType, BehandlingType, BehandlingSteg> lookup) {
         Objects.requireNonNull(behandlingType, "behandlingType"); //$NON-NLS-1$ // NOSONAR
         this.behandlingType = behandlingType;
         this.lookup = (stegType, behType) -> new BehandlingStegModellImpl(this, lookup.apply(stegType, behType), stegType);
+    }
+
+    static BehandlingStegTilstandEndringEvent nyBehandlingStegTilstandEndring(BehandlingskontrollKontekst kontekst,
+                                                                              BehandlingStegTilstandSnapshot fraTilstand,
+                                                                              BehandlingStegTilstandSnapshot tilTilstand) {
+        return new BehandlingStegTilstandEndringEvent(kontekst, fraTilstand, tilTilstand);
+    }
+
+    static BehandlingStegTilstandSnapshot tilBehandlingsStegSnapshot(Optional<BehandlingStegTilstand> tilstand) {
+        var stegType = tilstand.map(BehandlingStegTilstand::getBehandlingSteg).orElse(null);
+        var status = tilstand.map(BehandlingStegTilstand::getBehandlingStegStatus).orElse(null);
+        return getBehandlingStegTilstandSnapshot(tilstand, stegType, status);
+    }
+
+    private static BehandlingStegTilstandSnapshot getBehandlingStegTilstandSnapshot(Optional<BehandlingStegTilstand> tilstand,
+                                                                                    BehandlingStegType stegType,
+                                                                                    BehandlingStegStatus status) {
+        if (stegType != null) {
+            return new BehandlingStegTilstandSnapshot(tilstand.map(BehandlingStegTilstand::getId).orElse(null), stegType, status);
+        }
+        return null;
+    }
+
+    static BehandlingStegOvergangEvent nyBehandlingStegOvergangEvent(BehandlingModell modell,
+                                                                     BehandlingStegTilstandSnapshot forrigeTilstand,
+                                                                     BehandlingStegTilstandSnapshot nyTilstand, BehandlingskontrollKontekst kontekst) {
+
+        var stegFørType = forrigeTilstand != null ? forrigeTilstand.getSteg() : null;
+        var stegEtterType = nyTilstand != null ? nyTilstand.getSteg() : null;
+
+        var relativForflytning = modell.relativStegForflytning(stegFørType, stegEtterType);
+
+        return BehandlingStegOvergangEvent.nyEvent(kontekst, forrigeTilstand, nyTilstand, relativForflytning);
+
     }
 
     @Override
@@ -98,57 +119,35 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
     }
 
     @Override
-    public BehandlingStegModell finnSteg(String stegKode) {
-        return steg.get(indexOf(stegKode));
-    }
-
-    @Override
-    public BehandlingStegModell finnNesteSteg(String stegKode) {
-        int idx = indexOf(stegKode);
-        if (idx >= (steg.size() - 1) || idx < 0) {
-            return null;
-        } else {
-            return steg.get(idx + 1);
-        }
-    }
-
-    @Override
     public BehandlingStegModell finnNesteSteg(BehandlingStegType stegType) {
         Objects.requireNonNull(stegType, "stegType"); //$NON-NLS-1$ // NOSONAR
-        return finnNesteSteg(stegType.getKode());
+        var idx = indexOf(stegType);
+        if ((idx >= (steg.size() - 1)) || (idx < 0)) {
+            return null;
+        }
+        return steg.get(idx + 1);
     }
 
     @Override
     public BehandlingStegModell finnForrigeSteg(BehandlingStegType stegType) {
         Objects.requireNonNull(stegType, "stegType"); //$NON-NLS-1$ // NOSONAR
-        return finnForrigeSteg(stegType.getKode());
-    }
-
-    @Override
-    public BehandlingStegModell finnForrigeSteg(String stegKode) {
-
-        int idx = indexOf(stegKode);
-        if (idx > 0 && idx < steg.size()) {
+        var idx = indexOf(stegType);
+        if ((idx > 0) && (idx < steg.size())) {
             return steg.get(idx - 1);
-        } else {
-            return null;
         }
+        return null;
     }
 
     @Override
     public BehandlingStegModell finnTidligsteStegFor(AksjonspunktDefinisjon aksjonspunkt) {
-        return finnTidligsteStegFor(Arrays.asList(aksjonspunkt));
+        return finnTidligsteStegFor(List.of(aksjonspunkt));
     }
 
     @Override
     public BehandlingStegModell finnTidligsteStegFor(Collection<AksjonspunktDefinisjon> aksjonspunkter) {
-        for (BehandlingStegModellImpl stegModell : steg) {
-            Set<AksjonspunktDefinisjon> stegAksjonspkter = stegModell.getBehandlingStegType().getVurderingspunkter()
-                .stream()
-                .map(VurderingspunktDefinisjon::getAksjonspunktDefinisjoner)
-                .flatMap(Collection::stream)
-                .collect(Collectors.toSet());
-            boolean hørerTilSteget = aksjonspunkter.stream().anyMatch(stegAksjonspkter::contains);
+        for (var stegModell : steg) {
+            var hørerTilSteget = aksjonspunkter.stream().map(AksjonspunktDefinisjon::getBehandlingSteg)
+                .anyMatch(s -> s.getKode().equals(stegModell.getBehandlingStegType().getKode()));
             if (hørerTilSteget) {
                 return stegModell;
             }
@@ -157,16 +156,11 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
     }
 
     @Override
-    public BehandlingStegModell finnTidligsteStegForAksjonspunktDefinisjon(Collection<String> aksjonspunktDefinisjoner) {
-        for (BehandlingStegModellImpl stegModell : steg) {
-            Set<String> stegAksjonspkter = stegModell.getBehandlingStegType().getVurderingspunkter()
-                .stream()
-                .map(VurderingspunktDefinisjon::getAksjonspunktDefinisjoner)
-                .flatMap(Collection::stream)
-                .map(ad -> ad.getKode())
-                .collect(Collectors.toSet());
-
-            boolean hørerTilSteget = aksjonspunktDefinisjoner.stream().anyMatch(stegAksjonspkter::contains);
+    public BehandlingStegModell finnTidligsteStegForAksjonspunktDefinisjon(Collection<AksjonspunktDefinisjon> aksjonspunktDefinisjoner) {
+        for (var stegModell : steg) {
+            var hørerTilSteget = aksjonspunktDefinisjoner.stream()
+                .map(AksjonspunktDefinisjon::getBehandlingSteg)
+                .anyMatch(s -> s.getKode().equals(stegModell.getBehandlingStegType().getKode()));
             if (hørerTilSteget) {
                 return stegModell;
             }
@@ -176,11 +170,11 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
 
     @Override
     public BehandlingStegModell finnFørsteSteg(BehandlingStegType... behandlingStegTyper) {
-        Set<BehandlingStegType> stegTyper = new LinkedHashSet<>(Arrays.asList(behandlingStegTyper).stream().filter(bs -> bs != null)
+        Set<BehandlingStegType> stegTyper = new LinkedHashSet<>(Arrays.stream(behandlingStegTyper).filter(Objects::nonNull)
             .collect(Collectors.toList()));
 
-        for (BehandlingStegModellImpl stegModell : steg) {
-            BehandlingStegType sjekkSteg = stegModell.getBehandlingStegType();
+        for (var stegModell : steg) {
+            var sjekkSteg = stegModell.getBehandlingStegType();
             if (stegTyper.contains(sjekkSteg)) {
                 return stegModell;
             }
@@ -197,13 +191,19 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
         return steg.stream().map(m -> (BehandlingStegModell) m);
     }
 
+    @Override
+    public List<BehandlingStegType> getAlleBehandlingStegTyper() {
+        return steg.stream().map(s -> s.getBehandlingStegType()).collect(Collectors.toList());
+    }
+
     /**
-     * Siden CDI kan ha blitt benyttet programmatisk i oppslag må modellen også avsluttes når den ikke lenger er i bruk.
+     * Siden CDI kan ha blitt benyttet programmatisk i oppslag må modellen også
+     * avsluttes når den ikke lenger er i bruk.
      */
     @Override
     public void close() {
         if (destroyOnClose) {
-            for (BehandlingStegModellImpl stegModellImpl : steg) {
+            for (var stegModellImpl : steg) {
                 stegModellImpl.destroy();
             }
         }
@@ -221,20 +221,19 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
         if (fraOgMedSteg == null) {
             return Stream.empty();
         }
-        int idx = indexOf(fraOgMedSteg.getKode());
+        var idx = indexOf(fraOgMedSteg);
         if (idx < 0) {
-            throw new IllegalStateException("BehandlingSteg (fraogmed) " + fraOgMedSteg + ER_IKKE_DEFINERT_BLANT + steg); //$NON-NLS-1$ //$NON-NLS-2$
+            throw new IllegalStateException("BehandlingSteg (fraogmed) " + fraOgMedSteg + ER_IKKE_DEFINERT_BLANT + steg); //$NON-NLS-1$
         }
 
-        int idxEnd = tilSteg == null ? steg.size() - 1 : indexOf(tilSteg.getKode());
+        var idxEnd = tilSteg == null ? steg.size() - 1 : indexOf(tilSteg);
         if (idxEnd < 0) {
-            throw new IllegalStateException("BehandlingSteg (til) " + tilSteg + ER_IKKE_DEFINERT_BLANT + steg); //$NON-NLS-1$ //$NON-NLS-2$
+            throw new IllegalStateException("BehandlingSteg (til) " + tilSteg + ER_IKKE_DEFINERT_BLANT + steg); //$NON-NLS-1$
         }
         if (idx <= idxEnd) {
             return steg.subList(idx, idxEnd + (inklusivTil ? 1 : 0)).stream().map(e -> e);
-        } else {
-            return steg.subList(idxEnd + (inklusivTil ? 1 : 0), idx).stream().map(e -> e);
         }
+        return steg.subList(idxEnd + (inklusivTil ? 1 : 0), idx).stream().map(e -> e);
 
     }
 
@@ -244,28 +243,28 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
     }
 
     @Override
-    public Optional<BehandlingStegStatus> finnStegStatusFor(BehandlingStegType stegType, Collection<String> aksjonspunkter) {
-        BehandlingStegModellImpl stegModell = internFinnSteg(stegType);
+    public Optional<BehandlingStegStatus> finnStegStatusFor(BehandlingStegType stegType, Collection<AksjonspunktDefinisjon> aksjonspunkter) {
+        var stegModell = internFinnSteg(stegType);
         return stegModell.avledStatus(aksjonspunkter);
     }
 
     @Override
-    public Set<String> finnAksjonspunktDefinisjonerEtter(BehandlingStegType steg) {
-        Set<String> set = new LinkedHashSet<>();
+    public Set<AksjonspunktDefinisjon> finnAksjonspunktDefinisjonerEtter(BehandlingStegType steg) {
+        Set<AksjonspunktDefinisjon> set = new LinkedHashSet<>();
         internHvertStegEtter(steg).forEach(s -> {
-            set.addAll(s.getInngangAksjonpunktKoder());
-            set.addAll(s.getUtgangAksjonpunktKoder());
+            set.addAll(s.getInngangAksjonpunkt());
+            set.addAll(s.getUtgangAksjonpunkt());
         });
         return Collections.unmodifiableSet(set);
     }
 
     @Override
-    public Set<String> finnAksjonspunktDefinisjonerFraOgMed(BehandlingStegType steg, boolean medInngangOgså) {
+    public Set<AksjonspunktDefinisjon> finnAksjonspunktDefinisjonerFraOgMed(BehandlingStegType steg, boolean medInngangOgså) {
         if (steg == null) {
             return Collections.emptySet();
         }
 
-        Set<String> set = new LinkedHashSet<>();
+        Set<AksjonspunktDefinisjon> set = new LinkedHashSet<>();
 
         if (medInngangOgså) {
             set.addAll(finnAksjonspunktDefinisjoner(steg));
@@ -279,27 +278,27 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
     }
 
     @Override
-    public Set<String> finnAksjonspunktDefinisjoner(BehandlingStegType stegType) {
-        Set<String> set = new LinkedHashSet<>();
-        BehandlingStegModellImpl stegModell = internFinnSteg(stegType);
-        set.addAll(stegModell.getInngangAksjonpunktKoder());
-        set.addAll(stegModell.getUtgangAksjonpunktKoder());
+    public Set<AksjonspunktDefinisjon> finnAksjonspunktDefinisjoner(BehandlingStegType stegType) {
+        Set<AksjonspunktDefinisjon> set = new LinkedHashSet<>();
+        var stegModell = internFinnSteg(stegType);
+        set.addAll(stegModell.getInngangAksjonpunkt());
+        set.addAll(stegModell.getUtgangAksjonpunkt());
         return set;
     }
 
     @Override
-    public Set<String> finnAksjonspunktDefinisjonerInngang(BehandlingStegType steg) {
-        return internFinnSteg(steg).getInngangAksjonpunktKoder();
+    public Set<AksjonspunktDefinisjon> finnAksjonspunktDefinisjonerInngang(BehandlingStegType steg) {
+        return internFinnSteg(steg).getInngangAksjonpunkt();
     }
 
     @Override
-    public Set<String> finnAksjonspunktDefinisjonerUtgang(BehandlingStegType steg) {
-        return internFinnSteg(steg).getUtgangAksjonpunktKoder();
+    public Set<AksjonspunktDefinisjon> finnAksjonspunktDefinisjonerUtgang(BehandlingStegType steg) {
+        return internFinnSteg(steg).getUtgangAksjonpunkt();
     }
 
     protected BehandlingStegModellImpl internFinnSteg(BehandlingStegType stegType) {
         Objects.requireNonNull(stegType, "stegType"); //$NON-NLS-1$ // NOSONAR
-        return steg.get(indexOf(stegType.getKode()));
+        return steg.get(indexOf(stegType));
     }
 
     protected List<BehandlingStegModellImpl> internHvertStegEtter(BehandlingStegType stegType) {
@@ -307,55 +306,64 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
         if (stegType == null) {
             idx = 1;
         } else {
-            idx = indexOf(stegType.getKode());
+            idx = indexOf(stegType);
             if (idx < 0) {
-                throw new IllegalStateException("BehandlingSteg " + stegType + ER_IKKE_DEFINERT_BLANT + steg); //$NON-NLS-1$ //$NON-NLS-2$
-            } else if (idx == (steg.size() - 1)) {
+                throw new IllegalStateException("BehandlingSteg " + stegType + ER_IKKE_DEFINERT_BLANT + steg); //$NON-NLS-1$
+            }
+            if (idx == (steg.size() - 1)) {
                 return Collections.emptyList();
             }
         }
-        List<BehandlingStegModellImpl> subList = steg.subList(idx + 1, steg.size());
+        var subList = steg.subList(idx + 1, steg.size());
         return subList;
     }
 
     /**
      * Visit alle steg definert i denne modellen.
      *
-     * @param førsteSteg - Kode for første steg vi starter fra. Hvis null, begynn fra begynnelsen.
+     * @param førsteSteg - Kode for første steg vi starter fra. Hvis null, begynn
+     *                   fra begynnelsen.
      * @param visitor    - kalles for hvert steg definert
-     * @return null hvis alle steg til slutt ble kalt. Eller siste stegType som ble forsøkt.
+     * @return null hvis alle steg til slutt ble kalt. Eller siste stegType som ble
+     *         forsøkt.
      */
     @Override
     public BehandlingStegUtfall prosesserFra(BehandlingStegType førsteSteg, BehandlingModellVisitor visitor) {
         Objects.requireNonNull(visitor, "visitor"); //$NON-NLS-1$ // NOSONAR
 
-        int idx = førsteSteg == null ? 0 : indexOf(førsteSteg.getKode());
-        BehandlingStegModellImpl entry = steg.get(idx);
+        var idx = førsteSteg == null ? 0 : indexOf(førsteSteg);
+        var entry = steg.get(idx);
         while (entry != null) {
-            logger.debug("Prosesserer steg: {}", entry);
-            BehandlingStegProsesseringResultat resultat = visitor.prosesser(entry);
-            BehandlingStegStatus nyStegStatus = resultat.getNyStegStatus();
+            LOG.debug("Prosesserer steg: {}", entry);
+            var resultat = visitor.prosesser(entry);
 
-            if (!nyStegStatus.kanFortsetteTilNeste()) {
+            if (!kanFortsetteTilNeste(resultat)) {
                 // bryt flyten, og bli stående på dette steget
-                logger.debug("Avbryter etter steg: {}, transisjon={}", entry, resultat);
+                LOG.debug("Avbryter etter steg: {}, transisjon={}", entry, resultat);
                 return new BehandlingStegUtfall(entry.getBehandlingStegType(), resultat.getNyStegStatus());
             }
 
-            StegTransisjon transisjon = finnTransisjon(resultat.getTransisjon());
+            var transisjon = finnTransisjon(resultat.getTransisjon());
             entry = (BehandlingStegModellImpl) transisjon.nesteSteg(entry);
         }
 
         // avslutter med null når ikke flere steg igjen.
-        logger.debug("Avslutter, ingen flere steg");
+        LOG.debug("Avslutter, ingen flere steg");
         return null;
 
     }
 
-    public BehandlingStegModellImpl leggTil(BehandlingStegType stegType, BehandlingType behandlingType) {
+    boolean kanFortsetteTilNeste(StegProsesseringResultat resultat) {
+        var transisjon = finnTransisjon(resultat.getTransisjon()); // TODO (jol) rydd opp henleggelse. HENLEGGELSE er avbrutt, ikke
+        // framoverført
+        return resultat.getNyStegStatus().kanFortsetteTilNeste()
+            || (transisjon.getMålstegHvisHopp().isPresent() && !FellesTransisjoner.HENLAGT.getId().equals(transisjon.getId()));
+    }
+
+    void leggTil(BehandlingStegType stegType, BehandlingType behandlingType) {
         Objects.requireNonNull(stegType, "stegType"); //$NON-NLS-1$ // NOSONAR
 
-        BehandlingStegModellImpl entry = lookup.apply(stegType, behandlingType);
+        var entry = lookup.apply(stegType, behandlingType);
         if (entry == null) {
             throw new IllegalArgumentException(
                 "Fant ikke steg for kode: " + //$NON-NLS-1$
@@ -363,65 +371,88 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
                     ", [behandlingType=" + behandlingType + "]"); // NOSONAR //$NON-NLS-1$ //$NON-NLS-2$
         }
         this.steg.add(entry);
-        return entry;
+        leggTilAksjonspunktDefinisjoner(stegType, entry);
     }
 
-    void validerErIkkeAlleredeMappet(String aksjonspunktKode) {
-        Objects.requireNonNull(aksjonspunktKode, "aksjonspunktKode"); //$NON-NLS-1$
+    protected void leggTilAksjonspunktDefinisjoner(BehandlingStegType stegType, BehandlingStegModellImpl entry) {
+        AksjonspunktDefinisjon.finnAksjonspunktDefinisjoner(stegType, VurderingspunktType.INN)
+            .forEach(entry::leggTilAksjonspunktVurderingInngang);
 
-        for (BehandlingStegModellImpl bsm : this.steg) {
-            if (bsm.getInngangAksjonpunktKoder().contains(aksjonspunktKode)) {
-                throw new IllegalStateException("Aksjonpunktkode [" + aksjonspunktKode + "] allerede mappet til inngang av " + //$NON-NLS-1$ //$NON-NLS-2$
+        AksjonspunktDefinisjon.finnAksjonspunktDefinisjoner(stegType, VurderingspunktType.UT)
+            .forEach(entry::leggTilAksjonspunktVurderingUtgang);
+    }
+
+    void validerErIkkeAlleredeMappet(AksjonspunktDefinisjon aksjonspunktDefinisjon) {
+        Objects.requireNonNull(aksjonspunktDefinisjon, "aksjonspunktDefinisjon"); //$NON-NLS-1$
+
+        for (var bsm : this.steg) {
+            if (bsm.getInngangAksjonpunkt().contains(aksjonspunktDefinisjon)) {
+                throw new IllegalStateException("Aksjonpunktkode [" + aksjonspunktDefinisjon + "] allerede mappet til inngang av " + //$NON-NLS-1$ //$NON-NLS-2$
                     bsm.getBehandlingStegType().getKode()
-                    + " [behandlingType=" + behandlingType + "]"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+                    + " [behandlingType=" + behandlingType + "]"); //$NON-NLS-1$ //$NON-NLS-2$
                 // //
                 // NOSONAR
             }
-            if (bsm.getUtgangAksjonpunktKoder().contains(aksjonspunktKode)) {
-                throw new IllegalStateException("Aksjonpunktkode [" + aksjonspunktKode + "] allerede mappet til utgang av " + //$NON-NLS-1$ //$NON-NLS-2$
+            if (bsm.getUtgangAksjonpunkt().contains(aksjonspunktDefinisjon)) {
+                throw new IllegalStateException("Aksjonpunktkode [" + aksjonspunktDefinisjon + "] allerede mappet til utgang av " + //$NON-NLS-1$ //$NON-NLS-2$
                     bsm.getBehandlingStegType().getKode()
-                    + " [behandlingType=" + behandlingType + "]"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+                    + " [behandlingType=" + behandlingType + "]"); //$NON-NLS-1$ //$NON-NLS-2$
                 // //
                 // NOSONAR
             }
         }
-    }
-
-    static BehandlingStegOvergangEvent nyBehandlingStegOvergangEvent(BehandlingModell modell,
-                                                                     Optional<BehandlingStegTilstand> forrigeTilstand,
-                                                                     Optional<BehandlingStegTilstand> nyTilstand, BehandlingskontrollKontekst kontekst, boolean erOverstyring) {
-
-        BehandlingStegType stegFørType = forrigeTilstand.isPresent() ? forrigeTilstand.get().getBehandlingSteg() : null;
-        BehandlingStegType stegEtterType = nyTilstand.isPresent() ? nyTilstand.get().getBehandlingSteg() : null;
-
-        int relativForflytning = modell.relativStegForflytning(stegFørType, stegEtterType);
-
-        return BehandlingStegOvergangEvent.nyEvent(kontekst, forrigeTilstand, nyTilstand, relativForflytning, erOverstyring);
-
     }
 
     @Override
     public int relativStegForflytning(BehandlingStegType stegFørType, BehandlingStegType stegEtterType) {
-        return indexOf(stegEtterType) - indexOf(stegFørType);
+        return indexOfNullable(stegEtterType) - indexOfNullable(stegFørType);
+    }
+
+    private int indexOfNullable(BehandlingStegType stegType) {
+        return stegType == null ? -1 : indexOf(stegType);
     }
 
     private int indexOf(BehandlingStegType stegType) {
-        return stegType == null ? -1 : indexOf(stegType.getKode());
-    }
-
-    private int indexOf(String stegKode) {
-        Objects.requireNonNull(stegKode, "stegKode"); //$NON-NLS-1$ // NOSONAR
+        Objects.requireNonNull(stegType, "stegKode"); //$NON-NLS-1$ // NOSONAR
         for (int i = 0, max = steg.size(); i < max; i++) {
             BehandlingStegModell bsModell = steg.get(i);
-            if (Objects.equals(stegKode, bsModell.getBehandlingStegType().getKode())) {
+            if (Objects.equals(stegType, bsModell.getBehandlingStegType())) {
                 return i;
             }
         }
-        throw new IllegalArgumentException("Ukjent behandlingssteg: " + stegKode + ", [behandlingType=" + behandlingType //$NON-NLS-1$ //$NON-NLS-2$
-            + "]"); //$NON-NLS-1$ //$NON-NLS-2$ // NOSONAR
+        throw new IllegalArgumentException("Ukjent behandlingssteg: " + stegType.getKode() +
+            ", [behandlingType=" + behandlingType + "]"); //$NON-NLS-1$ //$NON-NLS-2$ // NOSONAR
     }
 
-    private static class CdiLookup implements TriFunction<BehandlingStegType, BehandlingType, BehandlingStegModellImpl> {
+    @Override
+    public boolean erStegAFørStegB(BehandlingStegType stegA, BehandlingStegType stegB) {
+        return indexOfNullable(stegA) < indexOfNullable(stegB);
+    }
+
+    /** Legger til default. */
+    protected void leggTil(BehandlingStegType... stegTyper) {
+        List.of(stegTyper).forEach(s -> leggTil(s, behandlingType));
+    }
+
+    @Override
+    public StegTransisjon finnTransisjon(TransisjonIdentifikator transisjonIdentifikator) {
+        return Transisjoner.finnTransisjon(transisjonIdentifikator);
+    }
+
+    @FunctionalInterface
+    public interface BiFunction<T, U, R> {
+        /**
+         * Applies this function to the given arguments.
+         *
+         * @param t the first function argument
+         * @param u the second function argument
+         * @return the function result
+         */
+        R apply(T t, U u);
+
+    }
+
+    private static class CdiLookup implements BiFunction<BehandlingStegType, BehandlingType, BehandlingStegModellImpl> {
         private BehandlingModellImpl behandlingModell;
 
         CdiLookup(BehandlingModellImpl behandlingModell) {
@@ -430,98 +461,35 @@ public class BehandlingModellImpl implements AutoCloseable, BehandlingModell {
 
         @Override
         public BehandlingStegModellImpl apply(BehandlingStegType stegType, BehandlingType behandlingType) {
-            BehandlingStegTypeAnnotationLiteral annotationLiteral = new BehandlingStegTypeAnnotationLiteral(stegType.getKode());
+            var annotationLiteral = new BehandlingStegRef.BehandlingStegRefLiteral(stegType);
 
-            Instance<BehandlingSteg> instance = CDI.current().select(BehandlingSteg.class, annotationLiteral);
-
-            Instance<BehandlingSteg> instance3 = disambiguate(instance, stegType, behandlingType);
-
-            return new BehandlingStegModellImpl(behandlingModell, instance3, stegType);
-        }
-
-        private Instance<BehandlingSteg> disambiguate(Instance<BehandlingSteg> instance, BehandlingStegType stegType, BehandlingType behandlingType) {
-            // TODO (FC): Optimaliser følgende hvis nødvendig - eks. dersom allerede satisified kan vi shortcutte og
-            // heller bare validere riktig bruk av angitte annotations (eller at de ikke er der)
-
-            BehandlingTypeAnnotationLiteral behandlingTypeLiteral = new BehandlingTypeAnnotationLiteral(behandlingType.getKode());
-
-            // Finn alle som matcher BehandlingType (eller uspesifisert hvis ingen match)
-            Instance<BehandlingSteg> instance2 = instance.select(behandlingTypeLiteral);
-            if (instance2.isUnsatisfied()) {
-                instance2 = instance.select(new BehandlingTypeAnnotationLiteral());
-            }
-
-            if (instance2.isUnsatisfied()) {
-                logger.warn("FPT-105127: Utilfredsstilt avhengighet ved oppslag av behandlingssteg: {}, behandlingType {}.", stegType, behandlingType);
-            }
-            if (instance2.isAmbiguous()) {
-                logger.warn("FPT-105128 : Ambivalent avhengighet ved oppslag av behandlingssteg: {}, behandlingType {}.", stegType, behandlingType);
-            }
-            return instance2;
-        }
-    }
-
-    @Override
-    public boolean erStegAFørStegB(BehandlingStegType stegA, BehandlingStegType stegB) {
-        return indexOf(stegA) < indexOf(stegB);
-    }
-
-    @FunctionalInterface
-    public interface TriFunction<T, U, V> {
-        /**
-         * Applies this function to the given arguments.
-         *
-         * @param t the first function argument
-         * @param u the second function argument
-         * @param v the third function argument
-         * @return the function result
-         */
-        V apply(T t, U u);
-
-    }
-
-    /**
-     * Bygg modell baset på en liste av BehandlingTypeStegSekvens innslag.
-     */
-    public void leggTil(List<BehandlingTypeStegSekvens> stegSekvens) {
-        if (!steg.isEmpty()) {
-            throw new IllegalStateException(
-                "steg allerede bygd for behandlingType=" + behandlingType); //$NON-NLS-1$ //$NON-NLS-2$
-        }
-
-        Set<BehandlingTypeStegSekvens> sorted = new TreeSet<>(stegSekvensComparator());
-
-        Set<BehandlingTypeStegSekvens> duplicates = stegSekvens.stream()
-            .filter(b -> Objects.equals(b.getBehandlingType(), behandlingType))
-            .filter(b -> !sorted.add(b))
-            .collect(Collectors.toSet());
-
-        if (!duplicates.isEmpty()) {
-            throw new IllegalArgumentException("stegSekvens inneholder duplikater for behandlingType=" + behandlingType //$NON-NLS-1$
-                + ": " + duplicates); //$NON-NLS-1$ //$NON-NLS-2$
-        }
-
-        for (BehandlingTypeStegSekvens stegSekv : sorted) {
-            BehandlingStegType stegType = stegSekv.getStegType();
-            BehandlingStegModellImpl stegModell = this.leggTil(stegType, behandlingType);
-
-            stegModell.leggTilVurderingspunktInngang(stegType.getVurderingspunktInngang());
-            stegModell.leggTilVurderingspunktUtgang(stegType.getVurderingspunktUtgang());
+            var instance = CDI.current().select(BehandlingSteg.class, annotationLiteral);
+            return new BehandlingStegModellImpl(behandlingModell, instance, stegType);
         }
 
     }
 
-    public static Comparator<BehandlingTypeStegSekvens> stegSekvensComparator() {
-        return new Comparator<BehandlingTypeStegSekvens>() {
-            @Override
-            public int compare(BehandlingTypeStegSekvens b1, BehandlingTypeStegSekvens b2) {
-                return b1.getSekvensNr().compareTo(b2.getSekvensNr());
-            }
-        };
+    @SuppressWarnings("resource")
+    public static BehandlingModellBuilder builder(BehandlingType behandlingType) {
+        return new BehandlingModellBuilder(new BehandlingModellImpl(behandlingType, false));
     }
 
-    @Override
-    public StegTransisjon finnTransisjon(TransisjonIdentifikator transisjonIdentifikator) {
-        return Transisjoner.finnTransisjon(transisjonIdentifikator);
+    public static class BehandlingModellBuilder {
+        private BehandlingModellImpl modell;
+
+        public BehandlingModellBuilder(BehandlingModellImpl modell) {
+            this.modell = modell;
+        }
+
+        public BehandlingModell build() {
+            var b = modell;
+            modell = null;
+            return b;
+        }
+
+        public BehandlingModellBuilder medSteg(BehandlingStegType... stegTyper) {
+            modell.leggTil(stegTyper);
+            return this;
+        }
     }
 }
