@@ -2,38 +2,35 @@ package no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.impl;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingSteg;
-import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.BehandlingStegModell;
-import no.nav.foreldrepenger.tilbakekreving.behandlingskontroll.impl.BehandlingModellImpl.TriFunction;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingStegType;
 import no.nav.foreldrepenger.tilbakekreving.behandlingslager.behandling.BehandlingType;
 
 public class BehandlingModellEnkelTest {
 
-    private static final BehandlingStegType STEG_1 = TestBehandlingStegType.STEG_1;
-    private static final BehandlingStegType STEG_2 = TestBehandlingStegType.STEG_2;
-    private static final BehandlingStegType STEG_3 = TestBehandlingStegType.STEG_3;
+    private static final BehandlingStegType STEG_1 = BehandlingStegType.FAKTA_VERGE;
+    private static final BehandlingStegType STEG_2 = BehandlingStegType.FAKTA_FEILUTBETALING;
+    private static final BehandlingStegType STEG_3 = BehandlingStegType.FORELDELSEVURDERINGSTEG;
 
-    private static final BehandlingType BEHANDLING_TYPE = BehandlingType.TILBAKEKREVING;
+    private static final BehandlingType BEHANDLING_TYPE = BehandlingType.UDEFINERT;
 
     private final DummySteg dummyBehandlingSteg_1 = new DummySteg();
     private final DummySteg dummyBehandlingSteg_2 = new DummySteg();
     private final DummySteg dummyBehandlingSteg_3 = new DummySteg();
 
-    private final TriFunction<BehandlingStegType, BehandlingType, BehandlingSteg> finnSteg = DummySteg.map(
-            Arrays.asList(
-                    new TestStegKonfig(STEG_1, BEHANDLING_TYPE, dummyBehandlingSteg_1),
-                    new TestStegKonfig(STEG_2, BEHANDLING_TYPE, dummyBehandlingSteg_2),
-                    new TestStegKonfig(STEG_3, BEHANDLING_TYPE, dummyBehandlingSteg_3)
-            ));
+    private final BehandlingModellImpl.BiFunction<BehandlingStegType, BehandlingType, BehandlingSteg> finnSteg = DummySteg.map(
+        List.of(
+            new TestStegKonfig(STEG_1, BEHANDLING_TYPE, dummyBehandlingSteg_1),
+            new TestStegKonfig(STEG_2, BEHANDLING_TYPE, dummyBehandlingSteg_2),
+            new TestStegKonfig(STEG_3, BEHANDLING_TYPE, dummyBehandlingSteg_3)));
 
     @Test
     public void skal_bygge_behandlingskontroll_med_ett_steg() throws Exception {
-        try (BehandlingModellImpl modell = new BehandlingModellImpl(BEHANDLING_TYPE, finnSteg)) {
+        try (var modell = new BehandlingModellImpl(BehandlingType.TILBAKEKREVING, finnSteg)) {
             modell.leggTil(STEG_1, BEHANDLING_TYPE);
 
             assertThat(modell.finnSteg(STEG_1)).isNotNull();
@@ -47,13 +44,13 @@ public class BehandlingModellEnkelTest {
     @Test
     public void skal_bygge_behandlingskontroll_med_3_steg() throws Exception {
         // Arrange
-        try (BehandlingModellImpl modell = new BehandlingModellImpl(BEHANDLING_TYPE, finnSteg)) {
+        try (var modell = new BehandlingModellImpl(BehandlingType.TILBAKEKREVING, finnSteg)) {
             modell.leggTil(STEG_1, BEHANDLING_TYPE);
             modell.leggTil(STEG_2, BEHANDLING_TYPE);
             modell.leggTil(STEG_3, BEHANDLING_TYPE);
 
             // Act - Assert
-            BehandlingStegModell finnSteg2 = modell.finnSteg(STEG_2);
+            var finnSteg2 = modell.finnSteg(STEG_2);
             assertThat(finnSteg2).isNotNull();
             assertThat(finnSteg2.getSteg()).isSameAs(dummyBehandlingSteg_2);
 
